[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "keepassxc-ssh-agent"
dynamic = ["version"]
description = "SSH IdentityAgent proxy that triggers KeePassXC database unlock via TouchID"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-2.0-or-later"
dependencies = [
    "PyNaCl>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
keepassxc-ssh-agent = "keepassxc_ssh_agent.__main__:main"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["tests"]
